--- a/style.css
+++ b/style.css
@@ -79,7 +79,6 @@ nav {
     opacity: 0.9;
 }
 .service {
-    padding: 40px;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -92,9 +91,6 @@ nav {
     font-weight: 300;
     font-size: 20px;
     line-height: 28px;
-    padding-top: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
     margin: 0;
     text-align: center;
 }
@@ -189,11 +185,12 @@ a:-webkit-any-link {
     height: auto;
     display: block;
 }
+
 footer {
-    background-color: #f8f9fa; /* Light grey background */
+    background-color: #f8f9fa;
     padding: 20px 0;
     text-align: center;
-    color: #6c757d; /* Text color */
+    color: #6c757d;
 }
 
 .footer-container {
@@ -214,13 +211,13 @@ footer {
 }
 
 .footer-logo {
-    max-width: 150px; /* Adjust the logo size */
+    max-width: 150px;
 }
 
 .links-section h4, .contact-section h4 {
     font-weight: bold;
     margin-bottom: 10px;
-    color: #000; /* Black color for headings */
+    color: #000;
 }
 
 .links-section ul {
@@ -239,7 +236,7 @@ footer {
 }
 
 .links-section ul li a:hover {
-    color: #007bff; /* Blue color on hover */
+    color: #007bff;
 }
 
 .contact-section address {
@@ -248,7 +245,7 @@ footer {
 }
 
 .footer-bottom {
-    background-color: #e9ecef; /* Slightly darker grey */
+    background-color: #e9ecef;
     padding: 10px 0;
     font-size: 14px;
     color: #6c757d;
